# code-zestaw-3

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
ZADANIE1/: CMakeLists.txt  README.md  main.cpp  tstring.cpp  tstring.h  wyniki.txt
ZADANIE2/: CMakeLists.txt  README.md  bigint.cpp  bigint.h  main.cpp
ZADANIE2/tests/: test_bigint.cpp
ZADANIE3/: CMakeLists.txt  README.md  macierz_B.txt  macierz_C.txt  macierz_big_A.txt  macierz_big_B.txt  macierze.cpp  macierze.h  main.cpp
ZADANIE3/tests/: test_mnozenie.cpp
ZADANIE4/: CMakeLists.txt  README.md  main.cpp  rsa.cpp  rsa.h
ZADANIE4/tests/: test_rsa.cpp
